Fix position/overflow issues with pipeline graph

--- a/src/main/less/editor.less
+++ b/src/main/less/editor.less
@@ -62,7 +62,6 @@
     flex-grow: 10;
     flex-shrink: 0;
     flex-basis: 50%;
-    justify-content: center;
     background: @top-bg;
     border-bottom: solid 1px @hr-color;
     align-items: flex-start;
